--- a/css/styles.css
+++ b/css/styles.css
@@ -30,14 +30,14 @@ body {
   text-align: center;
 }
 
-.title,
-.card__title {
-  margin-bottom: 0.5em;
-}
-
 .title {
   font-size: 1.5rem;
   font-weight: 200;
+}
+
+.title,
+.card__title {
+  margin-bottom: 0.5em;
 }
 
 .subtitle,
@@ -50,19 +50,15 @@ body {
   margin-top: 0;
 }
 
-/* ! Modificar */
-
-.text,
-.card__text {
-  color: var(--grayish-blue);
-}
-
-/* ! */
-
 .text {
   width: 320px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.text,
+.card__text {
+  color: var(--grayish-blue);
 }
 
 .cards {
@@ -77,7 +73,7 @@ body {
   padding: 1em;
   margin: 0 auto 2em auto;
   border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 8px 15px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0 8px 20px;
 }
 
 .card-1 {
